# iris-wasmfx

./: .gitignore  LICENSE  README.md  Wasm.opam  dune-project  iris-wasmfx.opam
tests/: dune
theories/: ansi.v  binary_format_parser.v  binary_format_printer.v  binary_format_spec.v  binary_format_tests.v  binary_parser_types.v  bytes.v  bytes_pp.v  check_toks.v  common.v  datatypes.v  datatypes_properties.v  dune  floats.v  host.v  instantiation.v  interpreter.v  interpreter_func.v  interpreter_func_sound.v  interpreter_sound.v  leb128.v  leb128_tests.v  list_extra.v  memory.v  memory_list.v  numerics.v  operations.v  opsem.v  pp.v  properties.v  stdpp_aux.v  type_checker.v  type_checker_reflects_typing.v  type_preservation.v  type_progress.v  type_safety.v  typing.v
theories/iris/examples/: dune  iris_examples.v  iris_examples_factorial.v  iris_robust_example.v  iris_robust_example_adequacy.v  iris_robust_example_host.v
theories/iris/helpers/: dune  iris_prim_step_split.v  iris_properties.v  iris_reduction_core.v  iris_wasm_determ.v  lfilled_reduce.v
theories/iris/host/: dune  iris_host.v
theories/iris/instantiation/: dune  instantiation_properties.v  iris_instantiation.v
theories/iris/language/: dune  iris_adequacy.v  iris_atomicity.v  iris_ewp.v  iris_ewp_ctx.v  iris_ewp_def.v  iris_resources.v  iris_wp.v  iris_wp_def.v  protocols.v
theories/iris/logrel/: dune  iris_fundamental.v  iris_fundamental_binop.v  iris_fundamental_block.v  iris_fundamental_br.v  iris_fundamental_br_if.v  iris_fundamental_br_table.v  iris_fundamental_call.v  iris_fundamental_drop.v  (+31 more)
(+105 files in other folders)
